=spiel lokal wieder lauffaehig

--- a/src/core/Makefile.objs
+++ b/src/core/Makefile.objs
@@ -1,40 +1,39 @@
-trade.o
-world.o
-main.o
-objectfactory.o
-objectloader.o
-itemlist.o
-gridunit.o
-servernetwork.o
-action.o
-worldobject.o
-networkstruct.o
-projectile.o
-party.o
-debug.o
-item.o
-dropitem.o
-dmgprojectile.o
-creature.o
-pathfind.o
-fixedobject.o
-serverwobject.o
-player.o
-warrior.o
-monster.o
-mage.o
-archer.o
-priest.o
-itemfactory.o
-itemloader.o
-serveritem.o
-damage.o
-random.o
-region.o
-server.o
-spawnpoint.o
-document.o
-network.o
+../core/trade.o
+../core/world.o
+../core/objectfactory.o
+../core/objectloader.o
+../core/itemlist.o
+../core/gridunit.o
+../core/servernetwork.o
+../core/clientnetwork.o
+../core/worldobject.o
+../core/networkstruct.o
+../core/projectile.o
+../core/party.o
+../core/debug.o
+../core/item.o
+../core/dropitem.o
+../core/dmgprojectile.o
+../core/creature.o
+../core/pathfind.o
+../core/fixedobject.o
+../core/serverwobject.o
+../core/player.o
+../core/warrior.o
+../core/monster.o
+../core/mage.o
+../core/archer.o
+../core/priest.o
+../core/itemfactory.o
+../core/itemloader.o
+../core/serveritem.o
+../core/damage.o
+../core/random.o
+../core/region.o
+../core/spawnpoint.o
+../core/document.o
+../core/network.o
+../core/action.o
 
 ../tinyxml/tinyxml.o
 ../tinyxml/tinyxmlparser.o
