--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -15,7 +15,7 @@ LIBS = RakNet OIS
 LDFLAGS = $(shell pkg-config --libs $(LIBS))
 LOADLIBES =
 LDLIBS = $(LDFLAGS) -lm -lrt
-CFLAGS = -g
+CFLAGS = -O3
 CXXFLAGS = $(shell pkg-config --cflags $(LIBS)) $(CFLAGS)
 OBJS = $(shell cat ./Makefile.objs )
 DIRS = $(shell find . -mindepth 1 -maxdepth 1 -type d -not -iname .svn )
