=mapgen v0.12 generische Objekte eingefuehrt

--- a/src/Makefile.objs
+++ b/src/Makefile.objs
@@ -33,6 +33,8 @@
 ./core/action.o
 ./core/command.o
 ./core/geometry.o
+./core/mapgenerator.o
+./core/unionfindtree.o
 
 ./tinyxml/tinyxml.o
 ./tinyxml/tinyxmlparser.o
