--- a/src/gl_gui/Makefile.objs
+++ b/src/gl_gui/Makefile.objs
@@ -1,5 +1,4 @@
-main.o
-window_main_gl.o
+mapgen_gl.o
 
 ../core/trade.o
 ../core/world.o
@@ -36,6 +35,8 @@ window_main_gl.o
 ../core/action.o
 ../core/command.o
 ../core/geometry.o
+../core/mapgenerator.o
+../core/unionfindtree.o
 
 ../tinyxml/tinyxml.o
 ../tinyxml/tinyxmlparser.o
