--- a/src/Makefile
+++ b/src/Makefile
@@ -15,7 +15,7 @@ LIBS = OGRE OIS CEGUI CEGUI-OGRE RakNet
 LDFLAGS = $(shell pkg-config --libs $(LIBS))
 LOADLIBES =
 LDLIBS = $(LDFLAGS) -lm -lrt
-CFLAGS = -g
+CFLAGS = -Wall -g
 CXXFLAGS = $(shell pkg-config --cflags $(LIBS)) $(CFLAGS)
 CXXFLAGS += -I./core -I./gui -I./tinyxml
 OBJS = $(shell cat ./Makefile.objs )
