neue Dateien unter Windows hinzugefuegt

--- a/src/sumwars.cbp
+++ b/src/sumwars.cbp
@@ -153,11 +153,27 @@
 		<Unit filename="core\worldobject.h" />
 		<Unit filename="gui\application.cpp" />
 		<Unit filename="gui\application.h" />
+		<Unit filename="gui\charinfo.cpp" />
+		<Unit filename="gui\charinfo.h" />
+		<Unit filename="gui\chatline.cpp" />
+		<Unit filename="gui\chatline.h" />
+		<Unit filename="gui\controlpanel.cpp" />
+		<Unit filename="gui\controlpanel.h" />
+		<Unit filename="gui\inventory.cpp" />
+		<Unit filename="gui\inventory.h" />
+		<Unit filename="gui\itemwindow.cpp" />
+		<Unit filename="gui\itemwindow.h" />
 		<Unit filename="gui\main_gui.cpp" />
+		<Unit filename="gui\mainmenu.cpp" />
+		<Unit filename="gui\mainmenu.h" />
 		<Unit filename="gui\mainwindow.cpp" />
 		<Unit filename="gui\mainwindow.h" />
+		<Unit filename="gui\savegamelist.cpp" />
+		<Unit filename="gui\savegamelist.h" />
 		<Unit filename="gui\scene.cpp" />
 		<Unit filename="gui\scene.h" />
+		<Unit filename="gui\skilltree.cpp" />
+		<Unit filename="gui\skilltree.h" />
 		<Unit filename="tinyxml\tinystr.cpp" />
 		<Unit filename="tinyxml\tinystr.h" />
 		<Unit filename="tinyxml\tinyxml.cpp" />
