--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -50,18 +50,19 @@ am_sumwars_OBJECTS = core/trade.$(OBJEXT) core/world.$(OBJEXT) \
 	core/clientnetwork.$(OBJEXT) core/worldobject.$(OBJEXT) \
 	core/networkstruct.$(OBJEXT) core/projectile.$(OBJEXT) \
 	core/party.$(OBJEXT) core/debug.$(OBJEXT) core/item.$(OBJEXT) \
-	core/dropitem.$(OBJEXT) core/creature.$(OBJEXT) \
-	core/pathfind.$(OBJEXT) core/fixedobject.$(OBJEXT) \
-	core/player.$(OBJEXT) core/warrior.$(OBJEXT) \
-	core/monster.$(OBJEXT) core/mage.$(OBJEXT) \
-	core/archer.$(OBJEXT) core/priest.$(OBJEXT) \
-	core/itemfactory.$(OBJEXT) core/itemloader.$(OBJEXT) \
-	core/damage.$(OBJEXT) core/random.$(OBJEXT) \
-	core/region.$(OBJEXT) core/spawnpoint.$(OBJEXT) \
-	core/document.$(OBJEXT) core/network.$(OBJEXT) \
-	core/action.$(OBJEXT) core/command.$(OBJEXT) \
-	core/geometry.$(OBJEXT) core/mapgenerator.$(OBJEXT) \
-	core/unionfindtree.$(OBJEXT) gui/main_gui.$(OBJEXT) \
+	core/dropitem.$(OBJEXT) core/creaturestruct.$(OBJEXT) \
+	core/creature.$(OBJEXT) core/pathfind.$(OBJEXT) \
+	core/fixedobject.$(OBJEXT) core/player.$(OBJEXT) \
+	core/warrior.$(OBJEXT) core/monster.$(OBJEXT) \
+	core/mage.$(OBJEXT) core/archer.$(OBJEXT) \
+	core/priest.$(OBJEXT) core/itemfactory.$(OBJEXT) \
+	core/itemloader.$(OBJEXT) core/damage.$(OBJEXT) \
+	core/random.$(OBJEXT) core/region.$(OBJEXT) \
+	core/spawnpoint.$(OBJEXT) core/document.$(OBJEXT) \
+	core/network.$(OBJEXT) core/action.$(OBJEXT) \
+	core/command.$(OBJEXT) core/geometry.$(OBJEXT) \
+	core/mapgenerator.$(OBJEXT) core/unionfindtree.$(OBJEXT) \
+	core/variable.$(OBJEXT) gui/main_gui.$(OBJEXT) \
 	gui/mainwindow.$(OBJEXT) gui/scene.$(OBJEXT) \
 	gui/application.$(OBJEXT) gui/charinfo.$(OBJEXT) \
 	gui/controlpanel.$(OBJEXT) gui/inventory.$(OBJEXT) \
@@ -177,7 +178,6 @@ sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign subdir-objects
@@ -201,6 +201,7 @@ sumwars_SOURCES = core/trade.cpp \
 	core/debug.cpp \
 	core/item.cpp \
 	core/dropitem.cpp \
+	core/creaturestruct.cpp \
 	core/creature.cpp \
 	core/pathfind.cpp \
 	core/fixedobject.cpp \
@@ -223,6 +224,7 @@ sumwars_SOURCES = core/trade.cpp \
 	core/geometry.cpp \
 	core/mapgenerator.cpp \
 	core/unionfindtree.cpp \
+	core/variable.cpp \
 	gui/main_gui.cpp \
 	gui/mainwindow.cpp \
 	gui/scene.cpp \
@@ -336,6 +338,8 @@ core/item.$(OBJEXT): core/$(am__dirstamp) \
 	core/$(DEPDIR)/$(am__dirstamp)
 core/dropitem.$(OBJEXT): core/$(am__dirstamp) \
 	core/$(DEPDIR)/$(am__dirstamp)
+core/creaturestruct.$(OBJEXT): core/$(am__dirstamp) \
+	core/$(DEPDIR)/$(am__dirstamp)
 core/creature.$(OBJEXT): core/$(am__dirstamp) \
 	core/$(DEPDIR)/$(am__dirstamp)
 core/pathfind.$(OBJEXT): core/$(am__dirstamp) \
@@ -379,6 +383,8 @@ core/geometry.$(OBJEXT): core/$(am__dirstamp) \
 core/mapgenerator.$(OBJEXT): core/$(am__dirstamp) \
 	core/$(DEPDIR)/$(am__dirstamp)
 core/unionfindtree.$(OBJEXT): core/$(am__dirstamp) \
+	core/$(DEPDIR)/$(am__dirstamp)
+core/variable.$(OBJEXT): core/$(am__dirstamp) \
 	core/$(DEPDIR)/$(am__dirstamp)
 gui/$(am__dirstamp):
 	@$(MKDIR_P) gui
@@ -437,6 +443,7 @@ mostlyclean-compile:
 	-rm -f core/clientnetwork.$(OBJEXT)
 	-rm -f core/command.$(OBJEXT)
 	-rm -f core/creature.$(OBJEXT)
+	-rm -f core/creaturestruct.$(OBJEXT)
 	-rm -f core/damage.$(OBJEXT)
 	-rm -f core/debug.$(OBJEXT)
 	-rm -f core/document.$(OBJEXT)
@@ -467,6 +474,7 @@ mostlyclean-compile:
 	-rm -f core/templateloader.$(OBJEXT)
 	-rm -f core/trade.$(OBJEXT)
 	-rm -f core/unionfindtree.$(OBJEXT)
+	-rm -f core/variable.$(OBJEXT)
 	-rm -f core/warrior.$(OBJEXT)
 	-rm -f core/world.$(OBJEXT)
 	-rm -f core/worldobject.$(OBJEXT)
@@ -497,6 +505,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@core/$(DEPDIR)/clientnetwork.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@core/$(DEPDIR)/command.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@core/$(DEPDIR)/creature.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@core/$(DEPDIR)/creaturestruct.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@core/$(DEPDIR)/damage.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@core/$(DEPDIR)/debug.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@core/$(DEPDIR)/document.Po@am__quote@
@@ -527,6 +536,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@core/$(DEPDIR)/templateloader.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@core/$(DEPDIR)/trade.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@core/$(DEPDIR)/unionfindtree.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@core/$(DEPDIR)/variable.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@core/$(DEPDIR)/warrior.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@core/$(DEPDIR)/world.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@core/$(DEPDIR)/worldobject.Po@am__quote@
