--- a/configure.in
+++ b/configure.in
@@ -16,13 +16,17 @@ AC_CHECK_LIB([GL], [main])
 AC_CHECK_LIB([glut], [main])
 AC_CHECK_LIB([m], [pow])
 AC_CHECK_LIB([rt], [main])
+#AC_CHECK_LIB(OgreMain, main)
 AC_CHECK_LIB([OGRE], [main])
 AC_CHECK_LIB([OIS], [main])
-AC_CHECK_LIB([CEGUI], [main])
+#AC_CHECK_LIB(CEGUIBase, main)
+AC_CHECK_LIB(CEGUI, main)
 AC_CHECK_LIB([CEGUI-OGRE], [main])
 AC_CHECK_LIB([RakNet], [main])
+AC_CHECK_LIB(RakNetMain, main)
 AC_CHECK_LIB([freealut], [main])
 AC_CHECK_LIB([openal], [main])
+#AC_CHECK_LIB(lua, main)
 
 # Checks for header files.
 AC_CHECK_HEADERS([libintl.h locale.h stddef.h stdlib.h string.h sys/time.h unistd.h])
