fenster Questinfo eingebaut

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -80,6 +80,7 @@ sumwars_SOURCES = core/trade.cpp \
 	gui/chatline.cpp \
 	gui/partyinfo.cpp \
 	gui/charcreate.cpp \
+	gui/questinfo.cpp \
 	gui/sound.cpp \
 	tinyxml/tinyxml.cpp \
 	tinyxml/tinyxmlparser.cpp \
