minimap, erster versuch

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -83,6 +83,7 @@ sumwars_SOURCES = core/trade.cpp \
 	gui/partyinfo.cpp \
 	gui/charcreate.cpp \
 	gui/questinfo.cpp \
+	gui/minimapwindow.cpp \
 	gui/sound.cpp \
 	tinyxml/tinyxml.cpp \
 	tinyxml/tinyxmlparser.cpp \
