Fenster fuer Netzwerkuebertragung eingestellt

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -85,6 +85,7 @@ sumwars_SOURCES = core/world.cpp \
 	gui/minimapwindow.cpp \
 	gui/tradewindow.cpp \
 	gui/optionswindow.cpp\
+	gui/networkwindows.cpp \
 	gui/sound.cpp \
 	tinyxml/tinyxml.cpp \
 	tinyxml/tinyxmlparser.cpp \
