--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -67,6 +67,7 @@ sumwars_SOURCES = core/world.cpp \
 	core/dialogue.cpp \
 	core/quest.cpp \
 	core/minimap.cpp \
+	core/waypoint.cpp \
 	gui/main_gui.cpp \
 	gui/mainwindow.cpp \
 	gui/scene.cpp \
@@ -86,6 +87,7 @@ sumwars_SOURCES = core/world.cpp \
 	gui/tradewindow.cpp \
 	gui/optionswindow.cpp\
 	gui/networkwindows.cpp \
+	gui/worldmap.cpp \
 	gui/sound.cpp \
 	tinyxml/tinyxml.cpp \
 	tinyxml/tinyxmlparser.cpp \
