--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,6 +25,7 @@ AM_CXXFLAGS = -DDEBUG_LEVEL=5 $(shell pkg-config --cflags OGRE OIS CEGUI CEGUI-O
 ##AM_CXXFLAGS = -g -O3 -DDEBUG_LEVEL=5
 
 sumwars_SOURCES = core/world.cpp \
+	core/gameobject.cpp \
 	core/charconv.cpp \
 	core/objectfactory.cpp \
 	core/objectloader.cpp \
