Abfrage beim Speichern und Beenden eingefuegt

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -90,6 +90,7 @@ sumwars_SOURCES = core/world.cpp \
 	gui/networkwindows.cpp \
 	gui/worldmap.cpp \
 	gui/tooltip.cpp \
+	gui/messageboxes.cpp \
 	gui/sound.cpp \
 	tinyxml/tinyxml.cpp \
 	tinyxml/tinyxmlparser.cpp \
