--- a/src/sumwars.cbp
+++ b/src/sumwars.cbp
@@ -103,6 +103,8 @@
 		<Unit filename="core\eventsystem.h" />
 		<Unit filename="core\fixedobject.cpp" />
 		<Unit filename="core\fixedobject.h" />
+		<Unit filename="core\gameobject.cpp" />
+		<Unit filename="core\gameobject.h" />
 		<Unit filename="core\geometry.cpp" />
 		<Unit filename="core\geometry.h" />
 		<Unit filename="core\gettext.h" />
