Animationen fuer Priester als Platzhalter; kleinen bug mit unsigned int gefixt

--- a/src/sumwars.cbp
+++ b/src/sumwars.cbp
@@ -107,6 +107,7 @@
 		<Unit filename="core\gameobject.h" />
 		<Unit filename="core\geometry.cpp" />
 		<Unit filename="core\geometry.h" />
+		<Unit filename="core\gettext.cpp" />
 		<Unit filename="core\gettext.h" />
 		<Unit filename="core\gridunit.cpp" />
 		<Unit filename="core\gridunit.h" />
