--- a/src/sumwars.cbp
+++ b/src/sumwars.cbp
@@ -180,6 +180,12 @@
 		<Unit filename="gui\chatline.h" />
 		<Unit filename="gui\controlpanel.cpp" />
 		<Unit filename="gui\controlpanel.h" />
+		<Unit filename="gui\graphicmanager.cpp" />
+		<Unit filename="gui\graphicmanager.h" />
+		<Unit filename="gui\graphicobject.cpp" />
+		<Unit filename="gui\graphicobject.h" />
+		<Unit filename="gui\graphicobjectrenderinfo.cpp" />
+		<Unit filename="gui\graphicobjectrenderinfo.h" />
 		<Unit filename="gui\inventory.cpp" />
 		<Unit filename="gui\inventory.h" />
 		<Unit filename="gui\itemwindow.cpp" />
