--- a/src/sumwars.cbp
+++ b/src/sumwars.cbp
@@ -7,7 +7,8 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output=".\sumwars" prefix_auto="1" extension_auto="1" />
+				<Option output="..\sumwars" prefix_auto="1" extension_auto="1" />
+				<Option working_dir=".." />
 				<Option object_output="obj\Debug\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -24,7 +25,8 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output=".\sumwars" prefix_auto="1" extension_auto="1" />
+				<Option output="..\sumwars" prefix_auto="1" extension_auto="1" />
+				<Option working_dir=".." />
 				<Option object_output="obj\Release\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
