spiel funktioniert mit alter Raknet bibliothek

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 AUTOMAKE_OPTIONS = subdir-objects
 
 bin_PROGRAMS = sumwars
-sumwars_CPPFLAGS = -DDEBUG_LEVEL=5 -Wall -g -I./src/core -I./src/gui -I./src/tinyxml
+sumwars_CPPFLAGS = -DDEBUG_LEVEL=5 -Wall -g -I./src/core -I./src/gui -I./src/tinyxml -I./src/raknet/Include
 sumwars_CXXFLAGS = $(DEPS_CFLAGS)
 sumwars_LDFLAGS = -lm -lrt
 sumwars_LDADD = $(DEPS_LIBS)
