--- a/src/sumwars.cbp
+++ b/src/sumwars.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="..\sumwars" prefix_auto="1" extension_auto="1" />
+				<Option output="..\sumwars_dbg" prefix_auto="1" extension_auto="1" />
 				<Option working_dir=".." />
 				<Option object_output="obj\Debug\" />
 				<Option type="1" />
@@ -62,10 +62,8 @@
 			<Add option="-Wl,--enable-runtime-pseudo-reloc" />
 			<Add option="-Wl,--enable-auto-image-base" />
 			<Add option="-Wl,--add-stdcall-alias" />
-			<Add library="libpthreadGCE2.a" />
-			<Add library="libRakNet.a" />
+			<Add library="C:\MinGW\lib\libRakNet.a" />
 			<Add library="libwsock32.a" />
-			<Add library="libws2_32.a" />
 			<Add library="C:\MinGW\lib\alut.lib" />
 			<Add library="C:\MinGW\lib\OpenAL32.lib" />
 			<Add library="C:\MinGW\lib\lua51.lib" />
@@ -73,6 +71,7 @@
 			<Add library="C:\mingw\lib\ogg.lib" />
 			<Add library="C:\mingw\lib\vorbis.lib" />
 			<Add library="C:\mingw\lib\vorbisfile.lib" />
+			<Add library="C:\MinGW\lib\libpthreadGC2.a" />
 			<Add directory="$(OGRE_HOME)\lib" />
 			<Add directory="$(OGRE_HOME)\bin\Debug" />
 			<Add directory="$(OGRE_HOME)\bin\Release" />
