configure.ac modified to truly detect the installed the right lua name

--- a/configure.ac
+++ b/configure.ac
@@ -12,9 +12,9 @@ PKG_CHECK_MODULES([DEPS], [OGRE >= 1.4.0 OIS CEGUI CEGUI-OGRE RakNet freealut op
 AC_SUBST(DEPS_CFLAGS)
 AC_SUBST(DEPS_LIBS)
 
-PKG_CHECK_MODULES([LUA], [lua],
-	[PKG_CHECK_MODULES([LUA], [lua5.1],
-		[PKG_CHECK_MODULES([LUA], [lua-5.1],
+PKG_CHECK_MODULES([LUA], [lua],,
+	[PKG_CHECK_MODULES([LUA], [lua5.1],,
+		[PKG_CHECK_MODULES([LUA], [lua-5.1],,
 			[PKG_CHECK_MODULES([LUA], [lua51],
 			)
 		])
