- RakNet is now build directly with sumwars and is staticaly linked into the executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,13 @@ CMAKE_MINIMUM_REQUIRED( VERSION 2.8.0)
 PROJECT(SUMWARS)
 
 SET(VERSION_MAJOR "0")
-SET(VERSION_MINOR "5")
+SET(VERSION_MINOR "6")
 SET(VERSION_PATCH "0")
 SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/;${CMAKE_MODULE_PATH}")
+
+add_subdirectory(${PROJECT_SOURCE_DIR}/Dependencies/Raknet2_0)
 
 FIND_PACKAGE(Lua51 REQUIRED)
 FIND_PACKAGE(OGRE REQUIRED)
@@ -17,11 +19,11 @@ FIND_PACKAGE(OIS REQUIRED)
 FIND_PACKAGE(CEGUI REQUIRED)
 FIND_PACKAGE(CEGUIOGRE REQUIRED)
 FIND_PACKAGE(OpenAL REQUIRED)
-FIND_PACKAGE(RakNet REQUIRED)
 FIND_PACKAGE(ALUT REQUIRED)
 FIND_PACKAGE(OggVorbis REQUIRED)
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/tinyxml ${PROJECT_SOURCE_DIR}/src/core ${PROJECT_SOURCE_DIR}/src/gui)
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Dependencies/Raknet2_0/Include)
 INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${OIS_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
@@ -29,7 +31,6 @@ INCLUDE_DIRECTORIES(${CEGUI_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${CEGUIOGRE_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${ALUT_INCLUDES})
-INCLUDE_DIRECTORIES(${RakNet_INCLUDES})
 
 SET(SRCS
   ./src/core/worldobject.cpp
@@ -117,6 +118,8 @@ SET(SRCS
   ./src/tinyxml/tinyxml.cpp
   ./src/tinyxml/tinyxmlparser.cpp
 )
+
+SET(RakNet_LIBRARY ${CMAKE_CURRENT_BINARY_DIR}/Dependencies/Raknet2_0/libRakNet.a)
 
 ADD_EXECUTABLE(sumwars ${SRCS})
 TARGET_LINK_LIBRARIES(sumwars ${OGRE_LIBRARIES} ${OIS_LIBRARY_DBG} ${CEGUI_LIBRARIES} ${CEGUIOGRE_LIBRARIES} ${LUA_LIBRARIES} ${OPENAL_LIBRARY} ${ALUT_LIBRARY} ${RakNet_LIBRARY} ${OGGVORBIS_LIBRARIES})
